<resources>
    <string name="app_name">Pastry</string>
    <string name="splash_title">شیرینی فرانسوی</string>
    <string name="splash_logo">splash_logo</string>
    <string name="login_back">login_back</string>
    <string name="logo">logo</string>
    <string name="login_title">ورود به برنامه</string>
    <string name="login_name">شیرینی فرانسوی</string>
    <string name="login_desc">جهت ورود به برنامه شماره موبایل خود را در کادر زیر وارد کرده و کدارسالی به موبایل خود را در برنامه وارد کنید.</string>
    <string name="login_edt_hint">شماره موبایل خود را وارد کنید</string>
    <string name="login_alert_title">کد تایید</string>
    <string name="login_alert_username">اطلاعات کاربری</string>
    <string name="cancel">cancel</string>
    <string name="confirm_code">کد تایید را وارد کنید</string>
    <string name="dialog_edit_phone">ویرایش شماره</string>
    <string name="txt_resend">ارسال مجدد کد</string>
    <string name="username">نام و نام‌خانوادگی</string>
    <string name="please_wait">لطفا صبر کنید</string>
    <string name="back">back</string>
    <string name="notification">notification</string>
    <string name="menu">menu</string>
    <string name="profile">profile</string>
    <string name="polygon">polygon</string>
    <string name="shopping_cart">shopping cart</string>
    <string name="pastry">pastry</string>
    <string name="group">group</string>
    <string name="cake">cake</string>
    <string name="slider">slider</string>
    <string name="hotPastries">تازه ترین‌ شیرینی‌ها</string>
    <string name="icon">icon</string>
    <string name="more">بیشتر</string>
    <string name="arrow">arrow</string>
    <string name="currency">تومان</string>
    <string name="off">با تخفیف</string>
    <string name="comment_desc">comment</string>
    <string name="share_desc">share</string>
    <string name="favorite_desc">favorite</string>
    <string name="customize_text">سفارشی سازی</string>
    <string name="order_option_1">سفارش عمده</string>
    <string name="order_option_2">سفارش عادی</string>
    <string name="order_option_weight">انتخاب وزن</string>
    <string name="star">star</string>
    <string name="creator">مواد بکار رفته</string>
    <string name="detail">توضیحات</string>
    <string name="add_comment">ثبت نظر</string>
    <string name="comment_hint">نظر خود را وارد کنید</string>
    <string name="lorem">در اینجا متنی توضیحی در مورد شیرینی نوشته می شود. مانند نوع طعم و مزه آن و ....در اینجا متنی توضیحی در مورد شیرینی نوشته می شود.مانند نوع طعم و مزه آن و .در اینجا متنی توضیحی در مورد شیرینی نوشته می شود. مانند نوع طعم و مزه آن و .... در اینجا متنی توضیحی در مورد شیرینی نوشته می شود. مانند نوع طعم و مزه آن و در اینجا متنی توضیحی در مورد شیرینی نوشته می شود.</string>
    <string name="comment">نظرات کاربران</string>
    <string name="add_to_shop">افزودن به سبد خرید</string>
    <string name="kg">(kg)</string>
    <string name="min">-</string>
    <string name="one_number">1</string>
    <string name="plus">+</string>
    <string name="price_base">قیمت پایه</string>
    <string name="price_total">مبلغ نهایی</string>
    <string name="continue_sell">ادامه فرآیند ثبت سفارش</string>
    <string name="carousel">carousel</string>
    <string name="related">محصولات مشابه</string>
    <string name="pattern">pattern</string>
    <string name="my_orders">سفارش های من</string>
    <string name="sell_state">sell state</string>
    <string name="user_info">user info</string>
    <string name="favorite">favorite</string>
    <string name="address">address</string>
    <string name="img_off">off</string>
    <string name="image_desc">image desc</string>
    <string name="ic_f">ic_f</string>
    <string name="my_favorite">علاقه های من</string>
    <string name="not_favorite">محصول منتخبی وجود ندارد</string>
    <string name="birthdate">تاریخ تولد :</string>
    <string name="woman">زن</string>
    <string name="men">مرد</string>
    <string name="gender">جنسیت :</string>
    <string name="save_info">ثبت اطلاعات</string>
    <string name="hide">نامشخص</string>
    <string name="my_address">آدرس های من</string>
    <string name="no_address">آدرسی وجود ندارد</string>
    <string name="receiver">گیرنده :</string>
    <string name="phone">شماره همراه :</string>
    <string name="address_title">آدرس :</string>
    <string name="add_address">افزودن آدرس جدید</string>
    <string name="add_new_address">ثبت آدرس جدید</string>
    <string name="my_discount">تخفیف های من</string>
    <string name="no_discount">تخفیفی وجود ندارد</string>
    <string name="my_custom_cakes">کیک های سفارشی من</string>
    <string name="custom_cake_desc">کاربر عزیز در صورت تائید سفارش شما، می توانید اطلاعات آن را در بخش سفارش های من مشاهده کنید.</string>
    <string name="no_cake">کیکی وجود ندارد</string>
    <string name="my_order">سفارش های من</string>
    <string name="add_custom_cake">افزودن کیک سفارشی</string>
    <string name="custom_cake">کیک سفارشی</string>
    <string name="add_image">افزودن تصاویر بیشتر</string>
    <string name="pastry_weight">وزن شیرینی</string>
    <string name="tone">انتخاب وزن</string>
    <string name="select">انتخاب طبقه</string>
    <string name="detail_cake">توضیحات خود را بنویسید</string>
    <string name="order_id">شماره سفارش :</string>
    <string name="order_date">تاریخ سفارش :</string>
    <string name="order_status">وضعیت سفارش :</string>
    <string name="order_amount">مبلغ سفارش :</string>
    <string name="more_detail">مشاهده جزئیات بیشتر</string>
    <string name="fake_date">۱۴۰۱/۱۲/۱۱</string>
    <string name="order_state">در انتظار تایید مدیریت</string>
    <string name="calculating">در انتظار محاسبه</string>
    <string name="my_notifications">اعلانات من</string>
    <string name="no_notification">اعلانی وجود ندارد</string>
    <string name="banner_desc">banner desc</string>
    <string name="category_desc">category desc</string>
    <string name="search_desc">search desc</string>
    <string name="shopping_cart_text">سبد خرید</string>
    <string name="btn_discount">اعمال تخفیف</string>
    <string name="discount_hint">کد تخفیف</string>
    <string name="discount_text">تخفیف</string>
    <string name="final_price">مبلغ نهایی (تومان)</string>
    <string name="empty_cart">سبد خرید شما خالی است</string>
    <string name="send">ارسال</string>
    <string name="deliver">ارسال با پیک</string>
    <string name="in_person">تحویل حضوری</string>
    <string name="order_address_text">آدرس محل تحویل سفارش خود را انتخاب کنید.</string>
    <string name="close_desc">close</string>
    <string name="logout">خروج از حساب کاربری</string>
    <string name="upgrade">بروزرسانی نرم افزار</string>
    <string name="contact_us">ارتباط با ما</string>
    <string name="about_us">درباره ما</string>
    <string name="support">پشتیبانی</string>
    <string name="orders_desc">orders</string>
    <string name="support_desc">support</string>
    <string name="about_desc">about</string>
    <string name="contact_desc">contact</string>
    <string name="update_desc">update</string>
    <string name="logout_desc">logout</string>
    <string name="title_activity_nav_drawer2">NavDrawerActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>