<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:background="@drawable/back_item_recycler">

        <FrameLayout
            android:id="@+id/frame_layouts"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/img_cake"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/pastry"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/img_place_holder" />

            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/order_id"
            android:textColor="@color/color_text_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/frame_layouts"
            app:layout_constraintTop_toBottomOf="@+id/frame_layouts" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/order_date"
            android:textColor="@color/color_text_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/order_status"
            android:textColor="@color/color_text_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/order_amount"
            android:textColor="@color/color_text_black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/txt_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/frame_layouts"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            tools:text="7232165" />

        <TextView
            android:id="@+id/txt_order_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fake_date"
            android:textColor="@color/color_text_black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/txt_order_id"
            app:layout_constraintTop_toTopOf="@+id/textView5" />

        <TextView
            android:id="@+id/txt_order_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_state"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/txt_order_date"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/txt_order_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculating"
            android:textColor="@color/color_text_black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/txt_order_state"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_more_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/more_detail"
            android:textColor="@color/color_text_black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:backgroundTint="@color/white_main"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/frame_layouts"
            app:layout_constraintStart_toStartOf="@+id/frame_layouts"
            app:layout_constraintTop_toBottomOf="@+id/textView10"
            app:strokeColor="@color/black_main"
            app:strokeWidth="1dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>