<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color200"
    android:layoutDirection="ltr"
    tools:context=".ui.activity.NavDrawerActivity">

    <ImageView
        android:id="@+id/img_close_nav"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/close_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_close_nav">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/logout"
                android:textColor="@color/color_text_black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView15"
                app:layout_constraintEnd_toStartOf="@+id/imageView15"
                app:layout_constraintTop_toTopOf="@+id/imageView15" />

            <View
                android:id="@+id/view10"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="@+id/view9"
                app:layout_constraintTop_toBottomOf="@+id/txt_upgrade" />

            <TextView
                android:id="@+id/txt_upgrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/upgrade"
                android:textColor="@color/color_text_black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView14"
                app:layout_constraintEnd_toStartOf="@+id/imageView14"
                app:layout_constraintTop_toTopOf="@+id/imageView14" />

            <View
                android:id="@+id/view9"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="@+id/view5"
                app:layout_constraintTop_toBottomOf="@+id/txt_contact" />

            <TextView
                android:id="@+id/txt_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/contact_us"
                android:textColor="@color/color_text_black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView13"
                app:layout_constraintEnd_toStartOf="@+id/imageView13"
                app:layout_constraintTop_toTopOf="@+id/imageView13" />

            <View
                android:id="@+id/view5"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="@+id/view4"
                app:layout_constraintTop_toBottomOf="@+id/txt_about" />

            <TextView
                android:id="@+id/txt_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/about_us"
                android:textColor="@color/color_text_black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView12"
                app:layout_constraintEnd_toStartOf="@+id/imageView12"
                app:layout_constraintTop_toTopOf="@+id/imageView12" />

            <View
                android:id="@+id/view4"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/imageView11" />

            <TextView
                android:id="@+id/txt_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/support"
                android:textColor="@color/color_text_black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                app:layout_constraintEnd_toStartOf="@+id/imageView11"
                app:layout_constraintTop_toTopOf="@+id/imageView11" />

            <TextView
                android:id="@+id/txt_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/my_orders"
                android:textColor="@color/color_text_black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView10"
                app:layout_constraintEnd_toStartOf="@+id/imageView10"
                app:layout_constraintTop_toTopOf="@+id/imageView10" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/dotted"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/imageView10" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/image_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back_navigation_header" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="@color/white_main"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="@+id/imageView7"
                tools:text="نام کاربری" />

            <TextView
                android:id="@+id/txt_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/white_main"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                app:layout_constraintStart_toStartOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="@+id/imageView7"
                tools:text="09391082432" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="4dp"
                android:contentDescription="@string/orders_desc"
                app:layout_constraintEnd_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toBottomOf="@+id/imageView7"
                app:srcCompat="@drawable/ic_orders" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/support_desc"
                app:layout_constraintEnd_toEndOf="@+id/imageView10"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                app:srcCompat="@drawable/ic_support" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/about_desc"
                app:layout_constraintEnd_toEndOf="@+id/imageView11"
                app:layout_constraintTop_toBottomOf="@+id/view4"
                app:srcCompat="@drawable/ic_about_us" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/contact_desc"
                app:layout_constraintEnd_toEndOf="@+id/imageView12"
                app:layout_constraintTop_toBottomOf="@+id/view5"
                app:srcCompat="@drawable/ic_contact_us" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/update_desc"
                app:layout_constraintEnd_toEndOf="@+id/imageView13"
                app:layout_constraintTop_toBottomOf="@+id/view9"
                app:srcCompat="@drawable/ic_upgrade" />

            <TextView
                android:id="@+id/txt_num_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                app:layout_constraintBottom_toTopOf="@+id/view10"
                app:layout_constraintStart_toStartOf="@+id/view9"
                app:layout_constraintTop_toBottomOf="@+id/view9"
                tools:text="نسخه 1.1" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/logout_desc"
                app:layout_constraintEnd_toEndOf="@+id/imageView14"
                app:layout_constraintTop_toBottomOf="@+id/view10"
                app:srcCompat="@drawable/ic_exit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:contentDescription="@string/image_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nested_scroll_view"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/img_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>