<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/white_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:srcCompat="@drawable/black_logo" />

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/back"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_left" />

    <ImageView
        android:id="@+id/ic_alert"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/notification"
        app:layout_constraintBottom_toBottomOf="@+id/ic_back"
        app:layout_constraintStart_toEndOf="@+id/ic_back"
        app:layout_constraintTop_toTopOf="@+id/ic_back"
        app:srcCompat="@drawable/ic_alert" />

    <View
        android:id="@+id/view_alert"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/alert_back"
        app:layout_constraintBottom_toBottomOf="@+id/ic_alert"
        app:layout_constraintEnd_toEndOf="@+id/ic_alert"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/ic_alert"
        app:layout_constraintTop_toTopOf="@+id/ic_alert"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_alert_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white_main"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view_alert"
        app:layout_constraintEnd_toEndOf="@+id/view_alert"
        app:layout_constraintStart_toStartOf="@+id/view_alert"
        app:layout_constraintTop_toTopOf="@+id/view_alert"
        tools:text="5" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="view_alert, txt_alert_number" />

    <ImageView
        android:id="@+id/ic_menu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/menu"
        app:layout_constraintBottom_toBottomOf="@+id/ic_alert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ic_alert"
        app:srcCompat="@drawable/menu" />

</androidx.constraintlayout.widget.ConstraintLayout>